# yay

./: .gitignore  CMakeLists.txt  yay.c
